[package]
name = "spider-rules"
version = "0.3.0"
edition = "2024"
description = "Spider/crawler identification rules"
readme = "README.md"
repository = "https://github.com/hlhr202/Spider-Rules"
license = "MIT"

[lib]
name = "spider_rules"

[[bin]]
name = "spider_rules"
path = "src/main.rs"

[dependencies]
